--- a/style.css
+++ b/style.css
@@ -2,14 +2,12 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    user-select: none;
 }
 
 #container{
-    background-color:#048243; 
+    background-color: #01351a; 
     height:100vh;
-}
-#head {
-    color:#CAFFFB;
 }
 #body {
     min-height: 100%;  
@@ -21,15 +19,19 @@
 }
 #box {
     background-color: #FFF;
-    width: 100px;
-    height: 120px;
+    width: 280px;
+    height: 360px;
     display:flex;
     align-items: center;
     justify-content: center;
-    font-size: 70px;
+    font-size: 280px;
     margin-top: 20px;
     border-radius: 5%;
     border: 1px solid #000;
+    cursor: pointer;
+}
+.input{
+    height: 38px;
 }
 #button {
     color: #FFF;
@@ -39,19 +41,4 @@
     padding: 0.375rem 0.75rem;
     line-height: 1.5;
     border-radius: 0.25rem;
-    display: block;
-    outline:none;
-}
-
-#footer {
-    background-color:#32BF84; 
-    position: fixed; 
-    bottom:0;
-    left:0;
-}
-#footer span {
-    color:#CAFFFB;
-}
-#footer a {
-    color:#000;
 }
